# griffin

./: Cargo.toml  README  README.md  config.toml  griffin.yaml
src/: app.rs  config.rs  health.rs  lib.rs  main.rs
